# testbench-vscode-extension

./: .gitignore  .mocharc.ui.json  .nycrc.json  .prettierrc  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  config.json  eslint.config.mjs  language-configuration.json  noxfile.py  package-lock.json  package.json  pyproject.toml  release.config.js  tasks.py  testbench-visual-studio-code-extension-0.0.1.vsix  testbench2robotframework-0.8.1-py3-none-any.whl  testbench2robotframework-0.8.3.2-py3-none-any.whl  tsconfig.json  tsconfig.tsbuildinfo  user-guide.md  webpack.config.js  webpack.test.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-vsix.yml  cleanup-artifacts.yml  manual-release.yml  pr-check.yml  release.yml  trigger-docs-release.yml
bundled/libs/testbench2robotframework/: __init__.py  result_writer.py  test_suite_creation.py  test_theme_tree.py  test_theme_tree_name_visitor.py  testbench2rf.py
bundled/libs/testbench2robotframework-0.8.0b21.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.1.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.2.1.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.2.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.3.1.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.3.2.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.3.3.dist-info/: METADATA  RECORD  direct_url.json
bundled/libs/testbench2robotframework-0.8.3.6.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt
bundled/tools/tb2robot/: __main__.py
docs/: intro.md
docs/configuration/: _category_.json  settings-reference.md
docs/getting-started/: installation.md  quickstart.md
docs/getting-started/videos/: link_tov.webm  (+1 more)
docs/troubleshooting/: troubleshooting.md
docs/views/: _category_.json  main-views.md  projects-view.md  test-elements-view.md  test-themes-view.md
scripts/: clean-tests.js  run-profile-test.js
src/: activeConfigService.ts  browseProjects.ts  configuration.ts  connection.ts  connectionManager.ts  constants.ts  dependenciesCheck.ts  executeRobotFrameworkTests.ts  explorer.ts  extension.ts  extensionCommands.ts  jsonReportHandler.ts  login.ts  loginWebView.ts  loginWebView.txt  lsConfig.ts  newTreeView.ts  profileManager.ts  projectManagementTreeView.ts  pyCommandBuilder.ts  python.ts  reportHandler.ts  server.ts  sharedSessionManager.ts  testBenchAuthenticationProvider.ts  testBenchConnection.ts  testBenchLogger.ts  testBenchTypes.ts  testElementsTreeView.ts  testThemeTreeView.ts  testbench2robotframeworkLib.ts  testbenchConnection.ts  treeView.ts  types.ts  userSessionManager.ts  utils.ts
src/api/: LegacyPlayServerClient.ts
src/core/: cacheManager.ts
src/languageServer/: activeConfigService.ts  lsConfig.ts  server.ts
src/services/: cancellableOperationService.ts  customRootService.ts  iconManagementService.ts  markedItemStateService.ts  projectDataService.ts  resourceFileService.ts  testElementDataService.ts  treeServiceManager.ts  treeViewStateManager.ts  treeViewStateTypes.ts  unifiedTreeStateManager.ts
src/test/: extension.test.ts  jsonReportHandler.test.ts  projectManagementTreeView.test.ts  runTest.ts  runTests.ts  testBenchConnection.test.ts  testThemeTreeView.test.ts
src/treeViews/: TreeViewFactory.ts  index.ts
src/views/: projectManagementTreeView.ts  testThemeTreeView.ts
src/webview/: connectionManagement.css  connectionManagement.html  connectionManagement.js  loggedIn.css  loggedIn.html  loggedIn.js  main.js  styles.css
testbench-language-server/: pyproject.toml
testbench-language-server/testbench_language_server/: __init__.py  cli.py  constants.py  extension_debug_entry.py  extension_entry.py  file_edits.py  ls_exceptions.py  ls_logging.py  messages.py  server.py
testbench-language-server/testbench_language_server/testbench_api/: legacy_model.py  model.py  testbench_get.py  testbench_patch.py  testbench_resource_connection.py
testbench-language-server/testbench_language_server/testbench_resource/: resource_documentation.py  subdivision2resource.py  testbench_resource_model.py
(+377 files in other folders)
