[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "testbench-vscode-extension"
authors = [
    {name = "imbus AG", email = "support@imbus.de"},
]
description = ""
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "Apache 2.0 License"}
dynamic = ["version"]
dependencies = [
  "testbench2robotframework>=0.8.0a5",
  "robotframework==7.2",
  "testbench-language-server @ file:./testbench-language-server"
]

[project.optional-dependencies]
dev = [
  "nox",
  "invoke",
  "pip-tools",
  "ruff",
]


[tool.check-manifest]
ignore = [
  "config.json",
  "*.bat",
  "*.sh",
  "*.zip",
  "tests/**"
]


exclude = [
  "__pycache__",
]

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
  "A",
  "B",
  "C",
  "DTZ",
  "E",
  "F",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "T20",
  "UP",
  "W"
]

lint.ignore = [
  "ISC001"
]

exclude = [
  "__pycache__",
  "model.py",
  "legacy_model.py",
]
